2003-04-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/projmng.tcl (sn_new_project_cb): Don't delete
	a project file that was created in batch mode. The
	sn_create_new_project proc returns zero on a
	normal exit when in batch mode, so we were deleting
	the project file just after it had been created.
	[Bug 656067]

2003-04-02  Steven Johnson  <sjohnson@neurizon.net>

	* gui/tree.tcl (sort_refresh): Added this new method,
	to allow the sort order of a list to be reset,
	after changes may have been made to the list contents.
	* gui/retrieverpane.tcl (start_search): Called new
	sort_refresh method after symbol tree is regenerated
	(following a file save). This restores the sort
	order that was selected prior to the save.
	[Bug 577348]

2003-03-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in:
	* configure: Regen.
	* configure.in: Subst TK_DBGX.
	* bitmaps/Makefile.in:
	* db/Makefile.in:
	* demo/Makefile.in:
	* doc/Makefile.in:
	* doc/html/Makefile.in:
	* etc/Makefile.in:
	* etc/sn_toolchains/Makefile.in:
	* gui/Makefile.in:
	* hyper/Makefile.am: Define TK_DBGX so that
	we can load a tk dll built with --enable-symbols
	under Windows.
	* hyper/Makefile.in:
	* misc/Makefile.in:
	* misc/libutils/Makefile.in:
	* packages/Makefile.in:
	* parsers/Makefile.in:
	* parsers/assembly/Makefile.in:
	* parsers/chill/Makefile.in:
	* parsers/cobol/Makefile.in:
	* parsers/common/Makefile.in:
	* parsers/cpp/Makefile.in:
	* parsers/cpp/cpplib/Makefile.in:
	* parsers/fortran/Makefile.in:
	* parsers/gcj/Makefile.in:
	* parsers/java/Makefile.in:
	* parsers/libjcreuse/Makefile.in:
	* parsers/m4/Makefile.in:
	* parsers/python/Makefile.in:
	* parsers/sendmail/Makefile.in:
	* parsers/tcl/Makefile.in:
	* parsers/toolbox/Makefile.in:
	* sdk/Makefile.in:
	* sdk/api/Makefile.in:
	* sdk/api/c/Makefile.in:
	* sdk/api/c/database/Makefile.in:
	* sdk/api/c/database/examples/Makefile.in:
	* sdk/api/tcl/Makefile.in:
	* sdk/api/tcl/database/Makefile.in: